src/objects/fc_csc__Collections_Config_2__c.object
<CustomObject>
    <description>Additional configuration for collections.  This is broken out into a real custom object due to the need for an long text area field.</description>
    <fields>
        <fullName>fc_csc__Dunning_Notification_Footer__c</fullName>
        <label>Dunning Notification Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fc_csc__Dunning_Notification_Header__c</fullName>
        <label>Dunning Notification Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fc_csc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collections Config 2</label>
    <nameField>
        <displayFormat>CC2-{0000000}</displayFormat>
        <label>Collections Config 2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Config 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>